# structured-output-llm

./: .gitignore  Makefile  Makefile.docker  Makefile.k8s  USER_GUIDE.md  mlflow.db  pyproject.toml
configs/: data_config.yaml  model_config.k8s.yaml  model_config.local.yaml  model_config.yaml  schema_config.yaml  training_config.k8s.yaml  training_config.local.yaml  training_config.yaml
configs/presets/: training_balanced.yaml  training_quality.yaml  training_speed.yaml
data/golden/: golden.json  golden.jsonl
data/synthetic/: train.json  train.jsonl  val.json  val.jsonl
docker/: Dockerfile  entrypoint.sh
k8s/: evaluation-job-base.yaml  evaluation-job.yaml  kustomization.yaml  llm-pipeline-config.yaml  pvc.yaml  training-job.yaml
kubeflow/: pipeline.py
kubeflow/components/: evaluation_component.py  training_component.py
scripts/: generate_data.py  run_evaluation.sh  run_evaluation_local.sh  run_training.sh  run_training_local.sh  run_ui.sh
src/data/: dataset.py  generator.py  validator.py
src/evaluation/: evaluate.py  metrics.py
src/inference/: predict.py
src/training/: train.py
src/ui/: app.py  job_manager.py
src/utils/: config.py  logging_utils.py  mlflow_utils.py  model_loader.py  runtime.py
